[gd_scene load_steps=6 format=3 uid="uid://11rbq5xwc1uy"]

[ext_resource type="Script" path="res://addons/smm/gui/smm_control.gd" id="1_k4dx3"]
[ext_resource type="Script" path="res://addons/smm/gui/instruction_gui.gd" id="2_ttkjf"]
[ext_resource type="Texture2D" uid="uid://6tq41m622hrr" path="res://addons/smm/assets/buttons/Add.svg" id="3_xjg4n"]
[ext_resource type="Texture2D" uid="uid://beoii7vqtt18j" path="res://addons/smm/assets/buttons/Remove.svg" id="4_pw0h2"]
[ext_resource type="Texture2D" uid="uid://cl7k8ytumsj67" path="res://addons/smm/assets/buttons/Edit.svg" id="5_ngkl4"]

[node name="SmmControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4dx3")

[node name="SelectButton" type="Button" parent="."]
layout_mode = 0
offset_right = 166.0
offset_bottom = 49.0
text = "Select Machine..."

[node name="InstructionGui" type="Tree" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 57.0
grow_horizontal = 2
grow_vertical = 2
columns = 4
script = ExtResource("2_ttkjf")
plus_button_texture2d = ExtResource("3_xjg4n")
minus_button_texture2d = ExtResource("4_pw0h2")
modify_button_texture2d = ExtResource("5_ngkl4")

[connection signal="pressed" from="SelectButton" to="InstructionGui" method="_on_select_button_pressed"]
[connection signal="button_clicked" from="InstructionGui" to="InstructionGui" method="_on_button_clicked"]
